@@ -1,3 +1,4 @@
+* BUG#7152 correction de l'avenant de relation entre tiers
 * Sélection du pays par défaut lors de l'ajout d'une nouvelle adresse
 
 Version 1.12 - 2017-04-28* FEA#0000 Lancement d'un avenant de tiers depuis un contrat en proposant tous les tiers rattachés au contrat
